# My-My-Passport-Utility

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
libscsi/: Cargo.toml
libscsi/src/: access_flag.rs  auxiliary_info.rs  data_direction.rs  driver_status.rs  error.rs  file_descriptor.rs  host_status.rs  lib.rs  masked_status.rs  result_data.rs  scsi.rs  sg_io_header.rs
libscsi/src/command/: fixed_sense_buffer.rs  helper.rs  mod.rs  mode_select.rs  mode_sense.rs  read_capacity.rs  send_diagnostic.rs  sense.rs  unmap.rs
libscsi/src/command/inquiry/: block_limits_vpd.rs  logical_block_provisioning_vpd.rs  mod.rs  product_identification.rs
libscsi/src/os/: mod.rs  scsi_pass_through_header.rs  sg_io_header.rs
mmpu/: Cargo.toml  build.rs
mmpu/src/: args.rs  main.rs
mmpu_gui/: Cargo.toml  tauri.conf.json
mmpu_gui/icons/: icon.icns
mmpu_gui/src/: gui_error.rs  main.rs
mmpu_gui_view/: index.html
mmpu_gui_view/css/: style.css
mmpu_gui_view/js/: main.js
wd_vsc/: Cargo.toml
wd_vsc/src/: cipher.rs  lib.rs  password_utility.rs  result.rs  security_block.rs  security_status.rs
wd_vsc/src/native/: change_encryption_passphrase.rs  encryption_status.rs  mod.rs  read_handy_capacity.rs  read_handy_store.rs  reset_data_encryption_key.rs  unlock_encryption.rs  write_handy_store.rs
wd_vsc/src/native/mode/: device_configuration_page.rs  mod.rs  operations_page.rs  power_condition_mode_page.rs
