[package]
name = "libscsi"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
modular-bitfield-msb = "0.11.2"
thiserror = "1.0.37"


[target.'cfg(unix)'.dependencies]
nix = "0.25.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.43.0", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Storage_FileSystem",
    "Win32_Storage_IscsiDisc"
] }
