[package]
name = "mmpu"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["maboroshinokiseki"]
description = "An unofficial WD My Passport utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libscsi = {path = "../libscsi"}
wd_vsc = {path = "../wd_vsc"}
clap = { version = "4.0.25", features = ["derive"] }