[package]
name = "mmpu_gui"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["maboroshinokiseki"]
description = "An unofficial WD My Passport utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
libscsi = {path = "../libscsi"}
wd_vsc = {path = "../wd_vsc"}
thiserror = "1.0.37"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
