[package]
name = "wd_vsc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libscsi = {path = "../libscsi"}
modular-bitfield-msb = "0.11.2"
thiserror = "1.0.37"
rand = "0.8.5"
clap = { version = "4.0.25", features = ["derive"] }
sha2 = "0.10.6"